Revert agent core migration and add frontend support (#34)
* Revert "feat: migrate agent core from Spring AI to AgentScope-Java 1.0.11 (#19)"

This reverts commit ff0f58f8576a3dd116d697339d577831959470a2.

* feat: add frontend support

* chore: refine the LLM call logs